--- a/_proc/00_forensicface.ipynb
+++ b/_proc/00_forensicface.ipynb
@@ -74,24 +74,17 @@
      "output_type": "stream",
      "text": [
       "Applied providers: ['CUDAExecutionProvider', 'CPUExecutionProvider'], with options: {'CPUExecutionProvider': {}, 'CUDAExecutionProvider': {'do_copy_in_default_stream': '1', 'arena_extend_strategy': 'kNextPowerOfTwo', 'gpu_external_empty_cache': '0', 'gpu_external_free': '0', 'cudnn_conv_use_max_workspace': '0', 'gpu_mem_limit': '18446744073709551615', 'cudnn_conv_algo_search': 'EXHAUSTIVE', 'gpu_external_alloc': '0', 'device_id': '0'}}\n",
+      "find model: /home/rafael/.insightface/models/sepaelv2/1k3d68.onnx landmark_3d_68 ['None', 3, 192, 192] 0.0 1.0\n",
+      "Applied providers: ['CUDAExecutionProvider', 'CPUExecutionProvider'], with options: {'CPUExecutionProvider': {}, 'CUDAExecutionProvider': {'do_copy_in_default_stream': '1', 'arena_extend_strategy': 'kNextPowerOfTwo', 'gpu_external_empty_cache': '0', 'gpu_external_free': '0', 'cudnn_conv_use_max_workspace': '0', 'gpu_mem_limit': '18446744073709551615', 'cudnn_conv_algo_search': 'EXHAUSTIVE', 'gpu_external_alloc': '0', 'device_id': '0'}}\n",
       "find model: /home/rafael/.insightface/models/sepaelv2/det_10g.onnx detection [1, 3, '?', '?'] 127.5 128.0\n",
+      "Applied providers: ['CUDAExecutionProvider', 'CPUExecutionProvider'], with options: {'CPUExecutionProvider': {}, 'CUDAExecutionProvider': {'do_copy_in_default_stream': '1', 'arena_extend_strategy': 'kNextPowerOfTwo', 'gpu_external_empty_cache': '0', 'gpu_external_free': '0', 'cudnn_conv_use_max_workspace': '0', 'gpu_mem_limit': '18446744073709551615', 'cudnn_conv_algo_search': 'EXHAUSTIVE', 'gpu_external_alloc': '0', 'device_id': '0'}}\n",
+      "find model: /home/rafael/.insightface/models/sepaelv2/genderage.onnx genderage ['None', 3, 96, 96] 0.0 1.0\n",
       "set det-size: (320, 320)\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<__main__.ForensicFace>"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "ff = ForensicFace(use_gpu=True)\n",
-    "ff"
+    "ff = ForensicFace(use_gpu=True)"
    ]
   },
   {
@@ -102,14 +95,30 @@
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/rafael/mambaforge/envs/onnxgpu/lib/python3.9/site-packages/insightface/utils/transform.py:68: FutureWarning: `rcond` parameter will change to the default of machine precision times ``max(M, N)`` where M and N are the input matrix dimensions.\n",
+      "To use the future default and silence this warning we advise to pass `rcond=None`, to keep using the old, explicitly pass `rcond=-1`.\n",
+      "  P = np.linalg.lstsq(X_homo, Y)[0].T # Affine matrix. 3 x 4\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['bbox', 'kps', 'det_score', 'landmark_3d_68', 'pose', 'gender', 'age'])\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "(dict_keys(['keypoints', 'ipd', 'embedding', 'norm', 'magface_embedding', 'magface_norm', 'aligned_face']),\n",
-       " array([[103.60003, 139.88234],\n",
-       "        [174.26518, 137.33716],\n",
-       "        [140.281  , 187.14792],\n",
-       "        [109.09437, 219.34015],\n",
-       "        [173.40778, 217.09576]], dtype=float32))"
+       "(dict_keys(['keypoints', 'ipd', 'gender', 'age', 'pitch', 'yaw', 'roll', 'embedding', 'norm', 'magface_embedding', 'magface_norm', 'aligned_face']),\n",
+       " array([[103.600136, 139.88274 ],\n",
+       "        [174.26476 , 137.33769 ],\n",
+       "        [140.28084 , 187.14792 ],\n",
+       "        [109.09488 , 219.34029 ],\n",
+       "        [173.40738 , 217.09586 ]], dtype=float32))"
       ]
      },
      "execution_count": null,
@@ -140,7 +149,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L144){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L152){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ForensicFace.compare\n",
        "\n",
@@ -149,7 +158,7 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L144){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L152){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ForensicFace.compare\n",
        "\n",
@@ -177,7 +186,7 @@
     {
      "data": {
       "text/plain": [
-       "0.8555722"
+       "0.85562384"
       ]
      },
      "execution_count": null,
@@ -207,7 +216,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L156){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L164){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ForensicFace.aggregate_embeddings\n",
        "\n",
@@ -216,7 +225,7 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L156){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L164){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ForensicFace.aggregate_embeddings\n",
        "\n",
@@ -244,7 +253,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L165){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L173){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ForensicFace.aggregate_from_images\n",
        "\n",
@@ -253,7 +262,7 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L165){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L173){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ForensicFace.aggregate_from_images\n",
        "\n",
@@ -314,7 +323,7 @@
     {
      "data": {
       "text/plain": [
-       "(23.225662, 22.580925)"
+       "(23.233831, 22.589926)"
       ]
      },
      "execution_count": null,
