--- a/nbs/00_forensicface.ipynb
+++ b/nbs/00_forensicface.ipynb
@@ -51,21 +51,20 @@
     "\n",
     "        self.det_size = (det_size, det_size)\n",
     "\n",
-    "        # Download models if needed\n",
-    "        model_base_path = osp.join(osp.expanduser(\"~/.insightface/models\"), model)\n",
-    "        adaface_model_folder = osp.join(model_base_path, \"adaface\")\n",
-    "        det_path = osp.join(model_base_path, \"det_10g.onnx\")\n",
-    "        rec_path = osp.join(adaface_model_folder, \"adaface_ir101web12m.onnx\")\n",
+    "        #model_base_path = osp.join(osp.expanduser(\"~/.insightface/models\"), model)\n",
+    "        #adaface_model_folder = osp.join(model_base_path, \"adaface\")\n",
+    "        #det_path = osp.join(model_base_path, \"det_10g.onnx\")\n",
+    "        #rec_path = osp.join(adaface_model_folder, \"adaface_ir101web12m.onnx\")\n",
     "\n",
-    "        if not osp.exists(det_path):\n",
-    "            pass\n",
+    "        #if not osp.exists(det_path):\n",
+    "        #    pass\n",
     "\n",
-    "        if not osp.exists(det_path):\n",
-    "            pass\n",
+    "        #if not osp.exists(det_path):\n",
+    "        #    pass\n",
     "\n",
     "        self.detectmodel = FaceAnalysis(\n",
     "            name=model,\n",
-    "            allowed_modules=[\"detection\"],\n",
+    "            #allowed_modules=[\"detection\",\"landmark_3d_68\",\"genderage\"],\n",
     "            providers=[\"CUDAExecutionProvider\"]\n",
     "            if use_gpu\n",
     "            else [\"CPUExecutionProvider\"],\n",
@@ -122,7 +121,8 @@
     "            dist.append(np.linalg.norm(img_center - face_center))\n",
     "\n",
     "        # Get index of the face closest to the center of image\n",
-    "        return faces[dist.index(min(dist))].kps\n",
+    "        idx = dist.index(min(dist))\n",
+    "        return idx, faces[idx].kps\n",
     "\n",
     "    def process_image(self, imgpath: str):  # Path to image to be processed\n",
     "        \"\"\"\n",
@@ -142,7 +142,10 @@
     "        faces = self.detectmodel.get(bgr_img)\n",
     "        if len(faces) == 0:\n",
     "            return {}\n",
-    "        kps = self.get_most_central_face(bgr_img, faces)\n",
+    "        idx, kps = self.get_most_central_face(bgr_img, faces)\n",
+    "        gender = 'M' if faces[idx].gender == 1 else 'F'\n",
+    "        age = faces[idx].age\n",
+    "        pitch, yaw, roll = faces[idx].pose\n",
     "        bgr_aligned_face = face_align.norm_crop(bgr_img, kps)\n",
     "        ipd = np.linalg.norm(kps[0] - kps[1])\n",
     "        ada_inputs = {\n",
@@ -158,6 +161,11 @@
     "        return {\n",
     "            \"keypoints\": kps,\n",
     "            \"ipd\": ipd,\n",
+    "            \"gender\": gender,\n",
+    "            \"age\": age,\n",
+    "            \"pitch\": pitch,\n",
+    "            \"yaw\": yaw,\n",
+    "            \"roll\": roll,\n",
     "            \"embedding\": normalized_embedding.flatten() * norm.flatten()[0],\n",
     "            \"norm\": norm.flatten()[0],\n",
     "            \"magface_embedding\": mag_embedding,\n",
@@ -176,24 +184,17 @@
      "output_type": "stream",
      "text": [
       "Applied providers: ['CUDAExecutionProvider', 'CPUExecutionProvider'], with options: {'CPUExecutionProvider': {}, 'CUDAExecutionProvider': {'do_copy_in_default_stream': '1', 'arena_extend_strategy': 'kNextPowerOfTwo', 'gpu_external_empty_cache': '0', 'gpu_external_free': '0', 'cudnn_conv_use_max_workspace': '0', 'gpu_mem_limit': '18446744073709551615', 'cudnn_conv_algo_search': 'EXHAUSTIVE', 'gpu_external_alloc': '0', 'device_id': '0'}}\n",
+      "find model: /home/rafael/.insightface/models/sepaelv2/1k3d68.onnx landmark_3d_68 ['None', 3, 192, 192] 0.0 1.0\n",
+      "Applied providers: ['CUDAExecutionProvider', 'CPUExecutionProvider'], with options: {'CPUExecutionProvider': {}, 'CUDAExecutionProvider': {'do_copy_in_default_stream': '1', 'arena_extend_strategy': 'kNextPowerOfTwo', 'gpu_external_empty_cache': '0', 'gpu_external_free': '0', 'cudnn_conv_use_max_workspace': '0', 'gpu_mem_limit': '18446744073709551615', 'cudnn_conv_algo_search': 'EXHAUSTIVE', 'gpu_external_alloc': '0', 'device_id': '0'}}\n",
       "find model: /home/rafael/.insightface/models/sepaelv2/det_10g.onnx detection [1, 3, '?', '?'] 127.5 128.0\n",
+      "Applied providers: ['CUDAExecutionProvider', 'CPUExecutionProvider'], with options: {'CPUExecutionProvider': {}, 'CUDAExecutionProvider': {'do_copy_in_default_stream': '1', 'arena_extend_strategy': 'kNextPowerOfTwo', 'gpu_external_empty_cache': '0', 'gpu_external_free': '0', 'cudnn_conv_use_max_workspace': '0', 'gpu_mem_limit': '18446744073709551615', 'cudnn_conv_algo_search': 'EXHAUSTIVE', 'gpu_external_alloc': '0', 'device_id': '0'}}\n",
+      "find model: /home/rafael/.insightface/models/sepaelv2/genderage.onnx genderage ['None', 3, 96, 96] 0.0 1.0\n",
       "set det-size: (320, 320)\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<__main__.ForensicFace>"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "ff = ForensicFace(use_gpu=True)\n",
-    "ff\n"
+    "ff = ForensicFace(use_gpu=True)\n"
    ]
   },
   {
@@ -202,14 +203,30 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/rafael/mambaforge/envs/onnxgpu/lib/python3.9/site-packages/insightface/utils/transform.py:68: FutureWarning: `rcond` parameter will change to the default of machine precision times ``max(M, N)`` where M and N are the input matrix dimensions.\n",
+      "To use the future default and silence this warning we advise to pass `rcond=None`, to keep using the old, explicitly pass `rcond=-1`.\n",
+      "  P = np.linalg.lstsq(X_homo, Y)[0].T # Affine matrix. 3 x 4\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['bbox', 'kps', 'det_score', 'landmark_3d_68', 'pose', 'gender', 'age'])\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "(dict_keys(['keypoints', 'ipd', 'embedding', 'norm', 'magface_embedding', 'magface_norm', 'aligned_face']),\n",
-       " array([[103.60003, 139.88234],\n",
-       "        [174.26518, 137.33716],\n",
-       "        [140.281  , 187.14792],\n",
-       "        [109.09437, 219.34015],\n",
-       "        [173.40778, 217.09576]], dtype=float32))"
+       "(dict_keys(['keypoints', 'ipd', 'gender', 'age', 'pitch', 'yaw', 'roll', 'embedding', 'norm', 'magface_embedding', 'magface_norm', 'aligned_face']),\n",
+       " array([[103.600136, 139.88274 ],\n",
+       "        [174.26476 , 137.33769 ],\n",
+       "        [140.28084 , 187.14792 ],\n",
+       "        [109.09488 , 219.34029 ],\n",
+       "        [173.40738 , 217.09586 ]], dtype=float32))"
       ]
      },
      "execution_count": null,
@@ -256,7 +273,7 @@
     {
      "data": {
       "text/plain": [
-       "0.8555722"
+       "0.85562384"
       ]
      },
      "execution_count": null,
@@ -347,7 +364,7 @@
     {
      "data": {
       "text/plain": [
-       "(23.225662, 22.580925)"
+       "(23.233831, 22.589926)"
       ]
      },
      "execution_count": null,
